--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.13",
     "@babel/node": "^7.18.10",
-    "@babel/preset-env": "^7.18.10"
+    "@babel/preset-env": "^7.18.10",
+    "dotenv": "^16.0.2",
+    "morgan": "^1.10.0"
   }
 }
