--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=7003
-DATABASE=mongodb://mongo:irtbcYLX2hUXkGHxcihA@containers-us-west-95.railway.app:8006
+DATABASE=mongodb://mongo:UyDUYOK6BSdSbq5amVJC@containers-us-west-134.railway.app:6306
