--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=7003
-DATABASE=mongodb://mongo:UyDUYOK6BSdSbq5amVJC@containers-us-west-134.railway.app:6306
+DATABASE=mongodb://mongo:JulQQ36Ge7Jg89pqUSe3@containers-us-west-138.railway.app:6647
